# crosschat_mqtt

./: .gitignore  LICENSE  README.md  config.0.json  config.1.json  config.2.json  config.example.authenticated.json  config.json  config.metatest2.json  crosschat_python.sln  main.py  opencode.json  pyproject.toml  pyrightconfig.json  test.csharp.sh  test.mosquitto.sh  test.python.sh  test.sh  webchat.py
crosschat_lua/: README.md  test_externally.sh
crosschat_lua/cfg/: config.1.json  crosschat.json
crosschat_lua/lua/autorun/client/: crosschat_cl.lua
crosschat_lua/lua/autorun/server/: crossaowl.lua  crosschat.lua  crosslua.lua
crosschat_lua/src/crosschat/: init.lua  models.lua  protocol.lua  state.lua
csharp/: Aowl.cs  CrossChat.cs  Models.cs  Program.cs  README.md  State.cs  config.2.json
mosquitto/: README.md  aclfile  gen_passwd.sh  mosquitto.conf  passwd_plain  test.sh
src/crosschat/: README.md  __init__.py  aowl.py  crosschat.py  main.py  models.py  monitor.py  monitor_ext.py  state.py
static/: index.html
