[project]
name = "crosschat-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiomonitor>=0.7.1",
    "aiomqtt>=2.5.1",
    "fastapi[standard]>=0.136.1",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "structlog>=25.5.0",
]


# https://docs.astral.sh/ruff/tutorial/
[tool.ruff.lint]
#select = ["ALL"]
ignore = ["W191","E101"]
per-file-ignores = { }

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff]
line-length = 120
target-version = "py313"

src = ["src", "tests"]


[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.json",
]


[tool.mypy]
strict = false
exclude = ["venv", ".venv"]
ignore_missing_imports = true
allow_untyped_decorators = true
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[dependency-groups]
dev = [
    "pylance>=4.0.1",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 130
